--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
       fail-on-unknown-properties: true
       
   profiles:
-    active: oauth-security
+    active: basic-security
     group:
       prod: oauth-security
     
